@@ -55,7 +55,7 @@ public class PhoneNumberServiceImpl implements PhoneNumberService {
             return unformattedNumber;
         }
         String formattedNumber = unformattedNumber.replaceAll("\\D", "");
-        Integer defaultPhoneNumberDigits = new Integer(parameterService.getParameterValueAsString(VendorDetail.class, VendorParameterConstants.DEFAULT_PHONE_NUMBER_DIGITS));
+        Integer defaultPhoneNumberDigits = Integer.valueOf(parameterService.getParameterValueAsString(VendorDetail.class, VendorParameterConstants.DEFAULT_PHONE_NUMBER_DIGITS));
         // Before moving to the parameter table:
         // if ( formattedNumber.length() != VendorConstants.GENERIC_DEFAULT_PHONE_NUM_DIGITS ) {
         if (formattedNumber.length() != defaultPhoneNumberDigits) {
