@@ -52,7 +52,7 @@ public class LaborLedgerBalanceHistoryDaoOjb extends PlatformAwareDaoBaseOjb imp
         
         while (years != null && years.hasNext()) {
             Object[] year = years.next();
-            yearList.add(new Integer(year[0].toString()));
+            yearList.add(Integer.valueOf(year[0].toString()));
         }
         
         return yearList;
